--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <ul class="navbar-nav flex-row mr-0 ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/christian-cleberg/color-generator" title="View Source Code"><i class="fas fa-code mx-2"></i></a>
+                <a class="nav-link" href="https://git.sr.ht/~kaizoku/color-generator" title="View Source Code"><i class="fas fa-code mx-2"></i></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" onclick="saveImage()" title="Save as Image"><i class="far fa-image mx-2"></i></a>
